# python-velbus

./: .gitignore  .gitmodules  .hgignore  .hound.yml  .pre-commit-config.yaml  .project  .pydevproject  LICENSE  MANIFEST  MANIFEST.IN  MANIFEST.in  README.md  publish.sh  requirements.txt  setup.cfg  setup.py
.github/workflows/: pythonTest.yml  pythonpublish.yml
docs/: Makefile  requirements.txt
docs/source/: conf.py  index.rst  modules.rst  readme_link.rst  velbus.connections.rst  velbus.messages.rst  velbus.modules.rst  velbus.rst
examples/: asyncio-test.py  combination.py  forwarder.py  scan.py  switchconfig.py  switcher.py
src/velbus/: __init__.py  controller.py  forwarder.py  message.py  parser.py
src/velbusconfig/: __init__.py  controller.py  module.py  relay.py  switch.py  switch_config_reader.py
velbus/: __init__.py  command_registry.py  connection.py  constants.py  controller.py  data.json  message.py  module.py  module_registry.py  mqtt_server.py  parser.py  util.py
velbus/config/: __init__.py  controller.py  switch.py
velbus/connections/: __init__.py  connection.py  mqtt.py  serial.py  socket.py
velbus/messages/: __init__.py  blind_status.py  bus_active.py  bus_error_counter_status.py  bus_error_counter_status_request.py  bus_off.py  channel_name_part1.py  channel_name_part2.py  channel_name_part3.py  channel_name_request.py  clear_led.py  counter_status.py  counter_status_request.py  cover_down.py  cover_off.py  cover_position.py  cover_up.py  dimmer_channel_status.py  dimmer_status.py  fast_blinking_led.py  interface_status_request.py  (+44 more)
(+55 files in other folders)
