[metadata]
license 			= MIT
license_file 			= LICENSE
platforms 			= any
description 			= Python Library for the Velbus protocol
long_description 		= file: README.md
long_description_content_type 	= text/markdown
keywords 			= home, velbus, automation
classifier 			=
	Development Status :: 4 - Beta
	Intended Audience :: Developers
	License :: OSI Approved :: MIT License
	Natural Language :: English
	Operating System :: OS Independent
	Programming Language :: Python
	Topic :: Home Automation
